// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CBRepository Create should create user successfully 1`] = `
Object {
  "_id": "User|valid-user2@manuscriptsapp.com",
  "connectUserID": undefined,
  "email": "valid-user2@manuscriptsapp.com",
  "name": "Valid System User",
}
`;

exports[`CBRepository getAll should return user list 1`] = `
Array [
  Object {
    "_id": "User|valid-user-1@manuscriptsapp.com",
    "connectUserID": undefined,
    "email": "valid-user-1@manuscriptsapp.com",
    "name": "Cody Rodriquez",
  },
]
`;

exports[`CBRepository getOne should return user 1`] = `
Object {
  "_id": "User|valid-user-1@manuscriptsapp.com",
  "connectUserID": undefined,
  "email": "valid-user-1@manuscriptsapp.com",
  "name": "Cody Rodriquez",
}
`;

exports[`CBRepository patch should patch user data successfully 1`] = `
Object {
  "_id": "User|valid-user-1@manuscriptsapp.com",
  "connectUserID": undefined,
  "email": "valid-user-1@manuscriptsapp.com",
  "name": "Cody Rodriquez",
}
`;

exports[`CBRepository should build user model from row object 1`] = `
Object {
  "_id": "User|valid-user-1@manuscriptsapp.com",
  "connectUserID": undefined,
  "email": "valid-user-1@manuscriptsapp.com",
  "name": "Valid System User",
}
`;

exports[`CBRepository update should update user successfully 1`] = `
Object {
  "_id": "9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
  "connectUserID": undefined,
  "email": "lm10@manuscriptsapp.com",
  "name": "Lionel Messi",
}
`;

exports[`CBRepository update should update user successfully if the document _type is specified 1`] = `
Object {
  "_id": "9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
  "connectUserID": undefined,
  "email": "lm10@manuscriptsapp.com",
  "name": "Luis Suarez",
}
`;
